# document-translator-service

./: .coderules  .editorconfig  .env.example  .env.localstack.example  .gitignore  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CLINE.md  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json  start-localstack.sh
.agents/skills/docker-expert/: SKILL.md
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
.kilo/: kilo.json
.kilo/agents/: architect.md
app/: main.py
app/api/: dependencies.py
app/api/v1/endpoints/: auth.py  documents.py  users.py
app/core/: buckets.py  clients.py  config.py
app/repositories/: base_repository.py
backend/app/: schemas.py
docs/: documentation-guidelines.md  implementation-plan.md
docs/setup/: local-aws-setup.md  requirements.md
scripts/: start-infra.sh  start-localstack.sh
