[project]
name = "ai-document-translator"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0.25",
    "uvicorn[standard]>=0.27.0",
]

[tool.setuptools]
packages = ["app"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
ignore = ["E501"] # Line too long (handled by formatter)
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-third-party = ["alembic", "fastapi", "pydantic", "sqlalchemy"]
known-first-party = ["app"]


[tool.pyright]
include = ["app"]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "alembic",
    "**/node_modules",
    "**/.*",
]
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportPrivateImportUsage = "warning"
reportUnboundVariable = "warning"
reportAttributeAccessIssue = "warning"
reportIncompatibleMethodOverride = "warning"
reportUnusedParameter = "none"
pythonVersion = "3.14"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
