[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-translator-service"
version = "0.2.0"
requires-python = ">=3.12"
description = "Translate documents using AI"
readme = "README.md"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "boto3>=1.42.93",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "localstack>=2026.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0.25",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pre-commit>=3.7.0",
    "commitizen>=3.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
bump_pattern = "^((BREAKING[\\- ]CHANGE|\\w+)(\\(.+\\))?!?):"
bump_map = { "^.+!$" = "MAJOR", "^BREAKING[\\- ]CHANGE" = "MAJOR", "^feat" = "MINOR", "^fix" = "PATCH", "^refactor" = "PATCH", "^perf" = "PATCH", "^chore" = "PATCH", "^docs" = "PATCH", "^test" = "PATCH", "^style" = "PATCH", "^build" = "PATCH", "^ci" = "PATCH", "^revert" = "PATCH" }

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".git", "__pycache__", "dist", "build"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
ignore = [
    "E501", # Line too long (handled by formatter)
    "E402", # Module level import not at top of file
]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-third-party = ["alembic", "fastapi", "pydantic", "sqlalchemy"]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
include = ["app"]
exclude = [
    "**/__pycache__",
    ".venv",
    "**/.*",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.tox",
    "**/.venv",
    "**/*.gz",
    "**/*.pyc",
    "**/build",
    "**/dist",
    "**/env",
    "**/node_modules",
    "**/venv",
    "alembic",
    "venv",
]
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportPrivateImportUsage = "warning"
reportUnboundVariable = "warning"
reportAttributeAccessIssue = "warning"
reportIncompatibleMethodOverride = "warning"
reportUnusedParameter = "none"
pythonVersion = "3.13"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
omit = ["tests/*", "alembic/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
